--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
             </header>
             <div class="stat-bars">
                 <div class="stat-item">
-                    <p>Python</p>
+                    <p>Python - 3 Years</p>
                     <div class="stat-bar">
                         <div class="stat-fill python"></div>
                     </div>
                 </div>
                 <div class="stat-item">
-                    <p>Lua</p>
+                    <p>Lua - 1 Year</p>
                     <div class="stat-bar">
                         <div class="stat-fill lua"></div>
                     </div>
                 </div>
                 <div class="stat-item">
-                    <p>HTML & CSS</p>
+                    <p>HTML & CSS - 2 Years</p>
                     <div class="stat-bar">
                         <div class="stat-fill html-css"></div>
                     </div>
                 </div>
                 <div class="stat-item">
-                    <p>Placeholder Skill</p>
+                    <p>Blender - 6 Months</p>
                     <div class="stat-bar">
-                        <div class="stat-fill placeholder"></div>
+                        <div class="stat-fill blender"></div>
                     </div>
                 </div>
             </div>
@@ -116,10 +116,18 @@
                 <p>Here are some of the creative works I've made.</p>
             </header>
             <div class="artworks-grid">
-                <img src="images/artwork1.jpg" alt="Artwork 1" class="artwork">
-                <img src="images/artwork2.jpg" alt="Artwork 2" class="artwork">
-                <img src="images/artwork3.jpg" alt="Artwork 3" class="artwork">
-                <img src="images/artwork4.jpg" alt="Artwork 4" class="artwork">
+                <div class="artwork-frame">
+                    <img src="images/artwork1.jpg" alt="Artwork 1" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork2.jpg" alt="Artwork 2" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork3.jpg" alt="Artwork 3" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork4.jpg" alt="Artwork 4" class="artwork">
+                </div>
             </div>
         </div>
     </section>
