--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
             </header>
             <div class="artworks-grid">
                 <div class="artwork-frame">
-                    <img src="images/artwork1.jpg" alt="Artwork 1" class="artwork">
+                    <img src="images/artwork1.png" alt="Artwork 1" class="artwork">
                 </div>
                 <div class="artwork-frame">
-                    <img src="images/artwork2.jpg" alt="Artwork 2" class="artwork">
+                    <img src="images/artwork2.png" alt="Artwork 2" class="artwork">
                 </div>
                 <div class="artwork-frame">
-                    <img src="images/artwork3.jpg" alt="Artwork 3" class="artwork">
+                    <img src="images/artwork3.png" alt="Artwork 3" class="artwork">
                 </div>
                 <div class="artwork-frame">
-                    <img src="images/artwork4.jpg" alt="Artwork 4" class="artwork">
+                    <img src="images/artwork4.png" alt="Artwork 4" class="artwork">
                 </div>
             </div>
         </div>
