--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="stat-item">
-                    <p>HTML & CSS - 2 Years</p>
+                    <p>HTML & CSS - 1 Year</p>
                     <div class="stat-bar">
                         <div class="stat-fill html-css"></div>
                     </div>
