--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id="menu">
         <ul class="links">
             <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#projects">Blender Walkthrough</a></li>
             <li><a href="#artworks">Artworks</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -69,40 +69,61 @@
         </div>
     </section>
 
-    <!-- Projects -->
+    <!-- Blender Walkthrough -->
     <section id="projects" class="wrapper">
         <div class="inner">
             <header class="special">
-                <h2>Projects</h2>
-                <p>A showcase of my technical journey.</p>
+                <h2>Blender Walkthrough</h2>
+                <p>A visual journey through my Blender creations and process.</p>
             </header>
-            <div class="highlights">
-                <section>
-                    <div class="content">
-                        <header>
-                            <i class="fa fa-code fa-2x"></i>
-                            <h3>Python Projects</h3>
-                        </header>
-                        <p>Developed automation scripts, game logic, and data analysis tools.</p>
+            <div class="walkthrough">
+                <section class="step">
+                    <header>
+                        <h3>Step 1: Initial Modeling</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/modeling-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
+                    <p>Placeholder description for the modeling process.</p>
                 </section>
-                <section>
-                    <div class="content">
-                        <header>
-                            <i class="fa fa-terminal fa-2x"></i>
-                            <h3>Lua Development</h3>
-                        </header>
-                        <p>Created game mods and scripting functionalities for game engines.</p>
+                <section class="step">
+                    <header>
+                        <h3>Step 2: Texturing</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/texturing-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
+                    <p>Placeholder description for texturing the model.</p>
                 </section>
-                <section>
-                    <div class="content">
-                        <header>
-                            <i class="fa fa-laptop fa-2x"></i>
-                            <h3>Web Development</h3>
-                        </header>
-                        <p>Built responsive websites with HTML, CSS, and JavaScript.</p>
+                <section class="step">
+                    <header>
+                        <h3>Step 3: Lighting Setup</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/lighting-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
+                    <p>Placeholder description for setting up lighting.</p>
+                </section>
+                <section class="step">
+                    <header>
+                        <h3>Step 4: Rendering</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/rendering-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <p>Placeholder description for rendering the final image.</p>
                 </section>
             </div>
         </div>
