--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
         </ul>
     </nav>
 
-    <!-- Banner -->
-    <section id="banner">
-        <div class="inner">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Showcasing skills, projects, and creativity.</p>
-        </div>
-        <video autoplay loop muted playsinline src="images/banner.mp4"></video>
-    </section>
+   <!-- Banner -->
+<section id="banner">
+    <div class="inner">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Showcasing skills, projects, and creativity.</p>
+    </div>
+    <video autoplay loop muted playsinline preload="auto" id="banner-video">
+        <source src="images/banner.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
     <!-- About Me -->
     <section id="about" class="wrapper">
