--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* Disable right-click on the video */
+        #banner-video {
+            pointer-events: none; /* Prevent video interaction */
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
@@ -30,7 +36,7 @@
         <h1>Welcome to My Portfolio</h1>
         <p>Showcasing skills, projects, and creativity.</p>
     </div>
-    <video autoplay loop muted playsinline preload="auto" id="banner-video">
+    <video autoplay loop muted playsinline preload="auto" id="banner-video" controlsList="nodownload">
         <source src="images/banner.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
