--- a/index.html
+++ b/index.html
@@ -51,10 +51,133 @@
                 <h2>About Me</h2>
                 <p>Here are some cool stats about my skills:</p>
             </header>
-            <!-- Your other sections go here -->
+          <div class="stat-bars">
+                <div class="stat-item">
+                    <p>Python - 3 Years</p>
+                    <div class="stat-bar">
+                        <div class="stat-fill python"></div>
+                    </div>
+                </div>
+                <div class="stat-item">
+                    <p>Lua - 1 Year</p>
+                    <div class="stat-bar">
+                        <div class="stat-fill lua"></div>
+                    </div>
+                </div>
+                <div class="stat-item">
+                    <p>HTML & CSS - 1 Year</p>
+                    <div class="stat-bar">
+                        <div class="stat-fill html-css"></div>
+                    </div>
+                </div>
+                <div class="stat-item">
+                    <p>Blender - 6 Months</p>
+                    <div class="stat-bar">
+                        <div class="stat-fill blender"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
+    <!-- Blender Walkthrough -->
+    <section id="projects" class="wrapper">
+        <div class="inner">
+            <header class="special">
+                <h2>Blender Walkthrough</h2>
+                <p>A visual journey through my Blender creations and process.</p>
+            </header>
+            <div class="walkthrough">
+                <section class="step">
+                    <header>
+                        <h3>Step 1: Initial Modeling</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/modeling-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <p>Placeholder description for the modeling process.</p>
+                </section>
+                <section class="step">
+                    <header>
+                        <h3>Step 2: Texturing</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/texturing-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <p>Placeholder description for texturing the model.</p>
+                </section>
+                <section class="step">
+                    <header>
+                        <h3>Step 3: Lighting Setup</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/lighting-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <p>Placeholder description for setting up lighting.</p>
+                </section>
+                <section class="step">
+                    <header>
+                        <h3>Step 4: Rendering</h3>
+                    </header>
+                    <div class="media-frame">
+                        <video controls>
+                            <source src="videos/rendering-placeholder.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <p>Placeholder description for rendering the final image.</p>
+                </section>
+            </div>
+        </div>
+    </section>
+
+    <!-- Artworks -->
+    <section id="artworks" class="wrapper">
+        <div class="inner">
+            <header class="special">
+                <h2>My Artworks</h2>
+                <p>Here are some of the creative works I've made.</p>
+            </header>
+            <div class="artworks-grid">
+                <div class="artwork-frame">
+                    <img src="images/artwork1.png" alt="Artwork 1" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork2.png" alt="Artwork 2" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork3.png" alt="Artwork 3" class="artwork">
+                </div>
+                <div class="artwork-frame">
+                    <img src="images/artwork4.png" alt="Artwork 4" class="artwork">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="wrapper">
+        <div class="inner">
+            <header class="special">
+                <h2>Contact Me</h2>
+                <p>Let's connect and work on something amazing!</p>
+            </header>
+            <ul class="plain">
+                <li><i class="fa fa-envelope"></i> <a href="mailto:your_email@example.com">your_email@example.com</a></li>
+                <li><i class="fa fa-github"></i> <a href="https://github.com/yourgithub">GitHub Profile</a></li>
+                <li><i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/yourlinkedin">LinkedIn Profile</a></li>
+            </ul>
+        </div>
+    </section>
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
