--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
         </ul>
     </nav>
 
-    <!-- Banner with video -->
-    <section id="banner">
-        <div class="inner">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Showcasing skills, projects, and creativity.</p>
-        </div>
-        <!-- Video with autoplay, loop, and muted -->
-        <video id="banner-video" preload="auto" loop controlsList="nodownload">
-            <source src="images/banner.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
+  <!-- Banner with video -->
+<section id="banner">
+    <div class="inner">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Showcasing skills, projects, and creativity.</p>
+    </div>
+    <!-- Video with autoplay, loop, muted, and playsinline for better compatibility -->
+    <video id="banner-video" autoplay loop muted playsinline preload="auto" controlsList="nodownload">
+        <source src="images/banner.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
+
 
     <!-- About Me Section -->
     <section id="about" class="wrapper">
