--- a/index.html
+++ b/index.html
@@ -179,11 +179,7 @@
             <header class="special">
                 <h2>Contact Me</h2>
                 <p>Let's connect and work on something amazing!</p>
-            </header>
-            <ul class="plain">
-                <li><i class="fa fa-envelope"></i> <a href="mailto:your_email@example.com">your_email@example.com</a></li>
-                <li><i class="fa fa-github"></i> <a href="https://github.com/yourgithub">GitHub Profile</a></li>
-                <li><i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/yourlinkedin">LinkedIn Profile</a></li>
+        
             </ul>
         </div>
     </section>
@@ -191,7 +187,7 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Zeemium. All rights reserved.</p>
         </div>
     </footer>
 
